--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "2.0.1",
+    "bootstrap": "^5.3.3",
     "sass": "1.75.0"
   }
 }
